Fix loop condition in pair_ou_divisible3 function and update console log formatting; add compte rendu for tp4 exercises; enhance styling in stylesheet.css

--- a/tp4/stylesheet.css
+++ b/tp4/stylesheet.css
@@ -2,7 +2,7 @@
 
 body{
 background: linear-gradient(to left, #000000aa, #2f0061);
-color: rgb(224, 248, 248);
+color: rgb(255, 255, 255);
 font-family: "Fascinate Inline", system-ui;
 font-style: normal;
 
